--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,6 +9,17 @@
 <body>
     <h1>Lasagna!</h1>
     <img src="https://www.allrecipes.com/thmb/hVgRcpnU4Ow6IQeAPdaIx_QmfoI=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-1x1-1-339b21b9f88b48c9943def663f43889c.jpg">
-    
+
+    <h2>Ingrediants</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and garlic</li>
+        <li>Tomato products</li>
+        <li>Sugar</li>
+        <li>Spices and seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>
 </body>
 </html>
