--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+
     <title>Lasagna!</title>
 </head>
 <body>
     <h1>Lasagna!</h1>
     <img src="https://www.allrecipes.com/thmb/hVgRcpnU4Ow6IQeAPdaIx_QmfoI=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-1x1-1-339b21b9f88b48c9943def663f43889c.jpg">
+    
+    <p>Hellalksjflskje <span>laskdfjdskfjl</span> slkdfjsldkjfldskj</p>
 
     <h2>Ingrediants</h2>
     <ul>
